--- a/style.css
+++ b/style.css
@@ -101,3 +101,150 @@ button, button:focus {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+
+/*Footer icons */
+
+/*Download links*/
+.linkDown {
+    width: 100%;
+    flex-direction: column;
+    display: flex;
+}
+.QRcode {
+    border: 0.0625rem solid rgba(0,0,0,.09);
+    width: 5.25rem;
+    margin-right: 0.9375rem;
+    height: 5.25rem;
+}
+.appStore{
+    justify-content: space-around;
+    flex-direction: column;
+    display: flex;
+    align-items: flex-start;
+    height: 5.25rem;
+}
+.logoStore {
+    width: 5rem;
+}
+
+/*Payments*/
+.footer-vn-visa-png {
+    background-size: 1347.2727272727273% 983.3333333333334%;
+    background-position: 84.6938775510204% 6.289308176100629%;
+}
+.footer-vn-mastercard-png {
+    background-size: 1347.2727272727273% 610.3448275862069%;
+    background-position: 49.416909620991255% 41.891891891891895%;
+}
+.footer-vn-jcb-png {
+    background-size: 1347.2727272727273% 769.5652173913044%;
+    background-position: 38.48396501457726% 38.311688311688314%;
+}
+.footer-vn-amex-png {
+    background-size: 1482% 804.5454545454545%;
+    background-position: 1.447178002894356% 6.451612903225806%;
+}
+.footer-vn-vn_cod_footer-png {
+    background-size: 1482% 610.3448275862069%;
+    background-position: 59.91316931982634% 63.513513513513516%;
+}
+.footer-vn-vn_installment_footer-png {
+    background-size: 1347.2727272727273% 610.3448275862069%;
+    background-position: 19.97084548104956% 66.21621621621621%;
+}
+.footer-vn-shopeepay-png {
+    background-size: 741% 931.578947368421%;
+    background-position: 71.9188767550702% 6.329113924050633%;
+}
+
+/*Deliveries*/
+.footer-vn-shopee-express-png {
+    background-size: 667.5675675675676% 983.3333333333334%;
+    background-position: 65.71428571428571% 35.22012578616352%;
+}
+.footer-vn-ghtk-png {
+    background-size: 1347.2727272727273% 983.3333333333334%;
+    background-position: 19.97084548104956% 37.735849056603776%;
+}
+.footer-vn-ghn-png {
+    background-size: 1347.2727272727273% 610.3448275862069%;
+    background-position: 9.037900874635568% 40.54054054054054%;
+}
+.footer-vn-viettel_post-png {
+    background-size: 578.90625% 138.28125%;
+    background-position: 88.90701468189233% 100%;
+}
+.footer-vn-vnpost-png {
+    background-size: 1347.2727272727273% 655.5555555555555%;
+    background-position: 1.4577259475218658% 72.66666666666667%;
+}
+.footer-vn-vn_jnt_footer-png {
+    background-size: 1347.2727272727273% 1106.25%;
+    background-position: 95.6268221574344% 6.211180124223603%;
+}
+.footer-vn-grab_express-png {
+    background-size: 552.9850746268656% 610.3448275862069%;
+    background-position: 29.9835255354201% 6.756756756756757%;
+}
+.footer-vn-ninja-van-png {
+    background-size: 1235% 680.7692307692307%;
+    background-position: 55.947136563876654% 6.622516556291391%;
+}
+.footer-vn-best-express-png {
+    background-size: 1029.1666666666667% 590%;
+    background-position: 13.452914798206278% 6.802721088435374%;
+}
+
+/*Social networks*/
+.footer-vn-f-png {
+    background-size: 2315.625% 553.125%;
+    background-position: 1.4104372355430184% 35.86206896551724%;
+}
+.footer-vn-ins-png {
+    background-size: 2315.625% 553.125%;
+    background-position: 29.90126939351199% 40.689655172413794%;
+}
+.footer-vn-lin-png {
+    background-size: 2315.625% 553.125%;
+    background-position: 46.403385049365305% 6.896551724137931%;
+}
+._23bPp9 {
+    height: 1rem;
+    width: 1rem;
+    margin-bottom: 0.25rem;
+    margin-right: 0.625rem;
+}
+.E5TVED {
+    font-size: .75rem;
+    margin-bottom: 0.75rem;
+    text-transform: capitalize;
+    display: flex;
+    align-content: center;
+}
+.zDMeuq {
+    text-decoration: none;
+    color: rgb(185, 184, 184);
+    align-content: center;
+    display: flex;
+}
+/*Source background*/
+.footer-vn-background {
+    background-image: url(https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/assets/4bdefde103e8aa245cd17511adde9f89.png);
+}
+ul.no-bullets {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 11.875rem;
+}
+.small-icons {
+    width: 3.4375rem;
+    height: 1.8125rem;
+    margin-bottom: 0.5rem;
+    margin-right: 0.5rem;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
