--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Raleway&family=Rubik&display=swap");
+
 /*              Sass Template           */
+
+
 /*  global classes  */
-button, button:focus {
+
+button,
+button:focus {
     outline: none !important;
     box-shadow: none !important;
 }
 
+
 /* typography classes */
+
 .font-baloo {
     font-family: "Baloo Thambi 2", cursive;
 }
@@ -35,7 +42,9 @@ button, button:focus {
     font-size: 20px;
 }
 
+
 /* Color Template  */
+
 .color-primary {
     color: #003859;
 }
@@ -60,161 +69,203 @@ button, button:focus {
     background: #FFD289;
 }
 
+
 /*  top sale template   */
+
 #top-sale .owl-carousel .item .product a {
     overflow: hidden;
 }
+
 #top-sale .owl-carousel .item .product img {
     transition: transform 0.5s ease;
 }
+
 #top-sale .owl-carousel .item .product img:hover {
     transform: scale(1.1);
 }
+
 #top-sale .owl-carousel .owl-nav button {
     position: absolute;
     top: 30%;
     outline: none;
 }
+
 #top-sale .owl-carousel .owl-nav button.owl-prev {
     left: 0;
 }
+
 #top-sale .owl-carousel .owl-nav button.owl-prev span,
 #top-sale .owl-carousel .owl-nav button.owl-next span {
     font-size: 35px;
     color: #003859;
     padding: 0 1rem;
 }
+
 #top-sale .owl-carousel .owl-nav button.owl-prev span {
     margin-left: -4rem;
 }
+
 #top-sale .owl-carousel .owl-nav button.owl-next {
     right: 0;
 }
+
 #top-sale .owl-carousel .owl-nav button.owl-next span {
     margin-right: -4rem;
 }
 
+
 /*   Special Price Section Template */
+
 #special-price .grid .grid-item {
     margin-right: 1.2rem;
     margin-top: 1rem;
 }
+
 
 /*# sourceMappingURL=style.css.map */
 
 
 /*Footer icons */
 
+
 /*Download links*/
+
 .linkDown {
     width: 100%;
     flex-direction: column;
     display: flex;
 }
+
 .QRcode {
-    border: 0.0625rem solid rgba(0,0,0,.09);
+    border: 0.0625rem solid rgba(0, 0, 0, .09);
     width: 5.25rem;
     margin-right: 0.9375rem;
     height: 5.25rem;
 }
-.appStore{
+
+.appStore {
     justify-content: space-around;
     flex-direction: column;
     display: flex;
     align-items: flex-start;
     height: 5.25rem;
 }
+
 .logoStore {
     width: 5rem;
 }
 
+
 /*Payments*/
+
 .footer-vn-visa-png {
     background-size: 1347.2727272727273% 983.3333333333334%;
     background-position: 84.6938775510204% 6.289308176100629%;
 }
+
 .footer-vn-mastercard-png {
     background-size: 1347.2727272727273% 610.3448275862069%;
     background-position: 49.416909620991255% 41.891891891891895%;
 }
+
 .footer-vn-jcb-png {
     background-size: 1347.2727272727273% 769.5652173913044%;
     background-position: 38.48396501457726% 38.311688311688314%;
 }
+
 .footer-vn-amex-png {
     background-size: 1482% 804.5454545454545%;
     background-position: 1.447178002894356% 6.451612903225806%;
 }
+
 .footer-vn-vn_cod_footer-png {
     background-size: 1482% 610.3448275862069%;
     background-position: 59.91316931982634% 63.513513513513516%;
 }
+
 .footer-vn-vn_installment_footer-png {
     background-size: 1347.2727272727273% 610.3448275862069%;
     background-position: 19.97084548104956% 66.21621621621621%;
 }
+
 .footer-vn-shopeepay-png {
     background-size: 741% 931.578947368421%;
     background-position: 71.9188767550702% 6.329113924050633%;
 }
 
+
 /*Deliveries*/
+
 .footer-vn-shopee-express-png {
     background-size: 667.5675675675676% 983.3333333333334%;
     background-position: 65.71428571428571% 35.22012578616352%;
 }
+
 .footer-vn-ghtk-png {
     background-size: 1347.2727272727273% 983.3333333333334%;
     background-position: 19.97084548104956% 37.735849056603776%;
 }
+
 .footer-vn-ghn-png {
     background-size: 1347.2727272727273% 610.3448275862069%;
     background-position: 9.037900874635568% 40.54054054054054%;
 }
+
 .footer-vn-viettel_post-png {
     background-size: 578.90625% 138.28125%;
     background-position: 88.90701468189233% 100%;
 }
+
 .footer-vn-vnpost-png {
     background-size: 1347.2727272727273% 655.5555555555555%;
     background-position: 1.4577259475218658% 72.66666666666667%;
 }
+
 .footer-vn-vn_jnt_footer-png {
     background-size: 1347.2727272727273% 1106.25%;
     background-position: 95.6268221574344% 6.211180124223603%;
 }
+
 .footer-vn-grab_express-png {
     background-size: 552.9850746268656% 610.3448275862069%;
     background-position: 29.9835255354201% 6.756756756756757%;
 }
+
 .footer-vn-ninja-van-png {
     background-size: 1235% 680.7692307692307%;
     background-position: 55.947136563876654% 6.622516556291391%;
 }
+
 .footer-vn-best-express-png {
     background-size: 1029.1666666666667% 590%;
     background-position: 13.452914798206278% 6.802721088435374%;
 }
 
+
 /*Social networks*/
+
 .footer-vn-f-png {
     background-size: 2315.625% 553.125%;
     background-position: 1.4104372355430184% 35.86206896551724%;
 }
+
 .footer-vn-ins-png {
     background-size: 2315.625% 553.125%;
     background-position: 29.90126939351199% 40.689655172413794%;
 }
+
 .footer-vn-lin-png {
     background-size: 2315.625% 553.125%;
     background-position: 46.403385049365305% 6.896551724137931%;
 }
+
 ._23bPp9 {
     height: 1rem;
     width: 1rem;
     margin-bottom: 0.25rem;
     margin-right: 0.625rem;
 }
+
 .E5TVED {
     font-size: .75rem;
     margin-bottom: 0.75rem;
@@ -222,22 +273,28 @@ button, button:focus {
     display: flex;
     align-content: center;
 }
+
 .zDMeuq {
     text-decoration: none;
     color: rgb(185, 184, 184);
     align-content: center;
     display: flex;
 }
+
+
 /*Source background*/
+
 .footer-vn-background {
     background-image: url(https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/assets/4bdefde103e8aa245cd17511adde9f89.png);
 }
+
 ul.no-bullets {
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 11.875rem;
 }
+
 .small-icons {
     width: 3.4375rem;
     height: 1.8125rem;
@@ -247,4 +304,149 @@ ul.no-bullets {
     justify-content: center;
     align-items: center;
     display: flex;
+}
+
+
+/* * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+    color: #333;
+    font-size: 62.5%;
+    font-family: 'Open Sans', sans-serif;
+} */
+
+
+/* .main {
+    background: #f1f1f1;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+} */
+
+#header {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    display: none;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 1000vh;
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.form {
+    display: none;
+    position: absolute;
+    z-index: 1000;
+    top: 80px;
+    left: calc(50vw - 180px);
+    width: 360px;
+    min-height: 100px;
+    padding: 32px 24px;
+    text-align: center;
+    background: #fff;
+    border-radius: 2px;
+    margin-left: auto;
+    margin-right: auto;
+    align-self: center;
+    box-shadow: 0 2px 5px 0 rgba(51, 62, 73, .1);
+}
+
+.form .heading {
+    font-size: 20px;
+}
+
+.form .desc {
+    text-align: center;
+    color: #636d77;
+    font-size: 16px;
+    font-weight: lighter;
+    line-height: 24px;
+    margin-top: 16px;
+    font-weight: 300;
+}
+
+.form-group {
+    display: flex;
+    margin-bottom: 16px;
+    flex-direction: column;
+}
+
+.form-label,
+.form-message {
+    text-align: left;
+}
+
+.form-label {
+    font-weight: 700;
+    padding-bottom: 6px;
+    line-height: 18px;
+    font-size: 14px;
+}
+
+.form-control {
+    height: 40px;
+    padding: 8px 12px;
+    border: 1px solid #b3b3b3;
+    border-radius: 3px;
+    outline: none;
+    font-size: 14px;
+}
+
+.form-control:hover {
+    border-color: #1dbfaf;
+}
+
+.form-group.invalid .form-control {
+    border-color: #f33a58;
+}
+
+.form-group.invalid .form-message {
+    color: #f33a58;
+}
+
+.form-message {
+    font-size: 12px;
+    line-height: 16px;
+    padding: 4px 0 0;
+}
+
+.form-submit {
+    outline: none;
+    background-color: #1dbfaf;
+    margin-top: 12px;
+    padding: 12px 16px;
+    font-weight: 600;
+    color: #fff;
+    border: none;
+    width: 100%;
+    font-size: 14px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.form-submit:hover {
+    background-color: #1ac7b6;
+}
+
+.spacer {
+    margin-top: 36px;
+}
+
+.visible {
+    display: block;
+}
+
+#login,
+#register,
+#logout {
+    border: none;
 }
