--- a/style.css
+++ b/style.css
@@ -470,6 +470,7 @@ html {
     border-bottom-right-radius: 10px;
     max-height: 200px;
     overflow-y: auto;
+    padding: 0px 12px;
 }
 @media screen and (max-width: 992px) {
     .navbar-collapse.collapse.in { 
