--- a/style.css
+++ b/style.css
@@ -447,9 +447,10 @@ html {
     border: none;
 }
 
-.logout {
+
+/* .logout {
     display: none;
-}
+} */
 
 .hide {
     display: none;
@@ -463,8 +464,9 @@ html {
     color: rgb(158, 56, 38);
     font-size: 16px;
 }
-#livesearch{
-    width: 200px; 
+
+#livesearch {
+    width: 200px;
     background: white;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -472,14 +474,15 @@ html {
     overflow-y: auto;
     padding: 0px 12px;
 }
+
 @media screen and (max-width: 992px) {
-    .navbar-collapse.collapse.in { 
+    .navbar-collapse.collapse.in {
         display: block!important;
     }
     .collapsing {
         overflow: hidden!important;
     }
-    #livesearch{
+    #livesearch {
         position: relative;
         /*This is relative to the navbar now*/
         left: -250px;
@@ -491,19 +494,18 @@ html {
     height: auto!important;
 }
 
-
-@media screen  and (min-width: 992px){
-    #search-form{
-        position:absolute;
+@media screen and (min-width: 992px) {
+    #search-form {
+        position: absolute;
         right: 35%;
     }
-    #menu-site{
+    #menu-site {
         position: relative;
         right: 25%;
     }
-    #livesearch{
+    #livesearch {
         position: absolute;
-        width: 200px; 
+        width: 200px;
         background: white;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
