--- a/style.css
+++ b/style.css
@@ -344,9 +344,9 @@ html {
 
 .form {
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 1000;
-    top: 80px;
+    top: 120px;
     left: calc(50vw - 180px);
     width: 360px;
     min-height: 100px;
@@ -461,7 +461,7 @@ html {
 }
 
 .username {
-    color: rgb(158, 56, 38);
+    color: rgb(253, 126, 7);
     font-size: 16px;
 }
 
@@ -521,7 +521,11 @@ html {
 @media screen and (max-width:684px) {
     h1.blog-title,
     h6.about_us--title,
+    h4.blog-title,
     h5.cart--title {
         margin-top: 70px;
+    }
+    section#banner-area {
+        margin-top: 135px;
     }
 }
